--- a/learn-certs-pr/courses/browse/index.yml
+++ b/learn-certs-pr/courses/browse/index.yml
@@ -5,4 +5,4 @@ metadata:
   description: Выберите традиционную форму обучения в классе или онлайн-видео для изучения по собственному расписанию, в своем темпе и в удобном вам месте.
 browseType: course
 summary: Выберите традиционную форму обучения в классе, чтобы учиться по собственному расписанию, в своем темпе и в своем собственном месте.
-SearchText: Поиск по номеру курса, названию или связанному номеру экзамена
+searchText: Поиск по номеру курса, названию или связанному номеру экзамена
