--- a/learn-certs-pr/azure-data-engineer.yml
+++ b/learn-certs-pr/azure-data-engineer.yml
@@ -1,15 +1,17 @@
-### YamlMime:Certification
+﻿### YamlMime:Certification
 title: 'Microsoft Certified: Azure Data Engineer Associate'
 metadata:
   title: 'Microsoft Certified: Azure Data Engineer Associate'
-  description: Инженеры Azure Data проектируют и внедряют управление, мониторинг, безопасность и конфиденциальность данных, используя полный стек служб данных Azure для удовлетворения потребностей бизнеса.
+  description: 'Инженеры Azure Data проектируют и внедряют управление, мониторинг, безопасность и конфиденциальность данных, используя полный стек служб данных Azure для удовлетворения потребностей бизнеса.'
 uid: certification.azure-data-engineer
 iconUrl: /media/learn/certification/badges/microsoft-certified-associate-badge.svg
-summary: Инженеры Azure Data проектируют и внедряют управление, мониторинг, безопасность и конфиденциальность данных, используя полный стек служб данных Azure для удовлетворения потребностей бизнеса.
+summary: |-
+  Инженеры Azure Data проектируют и внедряют управление, мониторинг, безопасность и конфиденциальность данных, используя полный стек служб данных Azure для удовлетворения потребностей бизнеса.
 subTitle: Инженеры Azure Data проектируют и внедряют управление, мониторинг, безопасность и конфиденциальность данных, используя полный стек служб данных Azure для удовлетворения потребностей бизнеса.
 levels:
 - intermediate
 skills:
+- 'NOTE: Тезисы, отображаемые под каждым из навыков в приведенном ниже документе с оцениваемыми навыками, предназначены для иллюстрации того, как мы оцениваем эти навыки. Этот список не является окончательным или исчерпывающим.'
 - Реализация решений для хранения данных
 - Управление и развитие обработки данных
 - Мониторинг и оптимизация решений по работе с данными
@@ -42,27 +44,22 @@ paths:
 - uid: learn.data-ai.data-processing-with-azure-adls
 - uid: learn.data-ai.implement-data-streaming-with-asa
 - uid: learn.data-ai.implement-sql-data-warehouse
-- uid: learn.modern-data-warehouse
-- uid: learn.data-science
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VwUG
 exams:
 - uid: exam.dp-200
 - uid: exam.dp-201
 resources:
-- title: Обучение для получения сертификата
-  description: 'Откройте для себя учебные ресурсы, чтобы получить сертификат Microsoft Certified: Azure Data Engineer Associate.'
-  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWuAzL
 - title: Руководство по образовательным курсам и сертификациям
   description: Изучите все сертификаты в кратком руководстве по образовательным курсам и сертификациям.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
 - title: Плакат с сертификацией
   description: Ознакомьтесь с обзором сертификации основ, ролевой и специальной сертификациями.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE2PjDI
-- title: Повтор экзамена
+- title: Exam Replay [Повтор экзамена]
   description: Два замечательных предложения, которые помогут вам повысить шансы на успех.
   href: deals.md
 - title: Поддержка по вопросам сертификации
-  description: Получить помощь через форум поддержки сертификации Microsoft Модератор форума ответит в течение одного рабочего дня, с понедельника по пятницу.
+  description: обратитесь за помощью на форумы поддержки сертификации Microsoft. Модератор форума ответит в течение одного рабочего дня, с понедельника по пятницу.
   href: help.md
 - title: Панель управления сертификацией
   description: Просмотр и управление запланированными мероприятиями, сертификатами и транскриптами.
