--- a/learn-certs-pr/courses/dp-070t00.yml
+++ b/learn-certs-pr/courses/dp-070t00.yml
@@ -1,8 +1,8 @@
-### YamlMime:Course
-title: Перенос рабочих нагрузок с открытым исходным кодом в Azure
+﻿### YamlMime:Course
+title: Migrate Open Source Data Workloads to Azure
 metadata:
-  title: 'Курс DP-070T00-A: Перенос рабочих нагрузок с открытым исходным кодом в Azure'
-  description: 'Курс DP-070T00-A: Перенос рабочих нагрузок с открытым исходным кодом в Azure'
+  title: 'Course DP-070T00-A: Migrate Open Source Data Workloads to Azure'
+  description: 'Course DP-070T00-A: Перенос рабочих нагрузок с открытым исходным кодом в Azure'
 uid: course.dp-070t00
 courseNumber: 'DP-070T00-A'
 hoursToComplete: 24
@@ -23,10 +23,9 @@ summary: |-
   Этот курс позволит студентам понять базу данных SQL Azure и обучить слушателей всему тому, что требуется для переноса рабочих нагрузок MySQL и PostgreSQL в базу данных SQL Azure.
 
   #### Профиль аудитории
-  Основная аудитория этого курса - разработчики баз данных, которые планируют перенос своих рабочих нагрузок MySQL или Postgres DB на Azure SQL DB.
-  Вторичной аудиторией этого курса являются администраторы MySQL/Postgres, которым необходимо повысить осведомленность о возможностях и преимуществах Azure SQL DB.
+  Основная аудитория этого курса - разработчики баз данных, которые планируют перенос своих рабочих нагрузок MySQL или Postgres DB на Azure SQL DB. Вторичной аудиторией этого курса являются администраторы MySQL/Postgres, которым необходимо повысить осведомленность о возможностях и преимуществах Azure SQL DB.
 prerequisitesSection: |-
-  В дополнение к своему профессиональному опыту студенты, которые проходят это обучение, должны уже иметь следующие технические знания&#58; 
+  В дополнение к своему профессиональному опыту студенты, которые проходят это обучение, должны уже иметь следующие технические знания&#58;
   - Некоторое знание систем управления реляционными базами данных с открытым исходным кодом, таких как Postgres и/или MySQL, администрирование SQL, методы резервного копирования и восстановления, то есть дамп данных таблицы
 outlineSection: |-
   ### Модуль 1&#58; Миграция в базу данных SQL Azure для MySQL и PostgreSQL
@@ -43,7 +42,7 @@ outlineSection: |-
   - Резервные копии/дампы данных из Postgres/MySQL
   - Восстановление из дампов данных
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Осуществлять обзор баз данных OSS
   - Работать с рабочими нагрузками баз данных OSS
   - Знать о проблемах клиентов при переносе данных
@@ -61,10 +60,10 @@ outlineSection: |-
   #### Лабораторная работа&#58; Перенос рабочих нагрузок MySQL DB в Azure SQL DB
   - Перенос рабочих нагрузок базы данных MySQL на базу данных SQL Azure
   - Определение исходных и целевых БД
-  - Осуществление миграции 
+  - Осуществление миграции
   - Проверка миграции
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Производить настройку и управление Azure SQL DB для MySQL
   - Осуществлять перенос локального MySQL на SQL DB для MySQL
   - Осуществлять миграцию приложений
@@ -80,16 +79,17 @@ outlineSection: |-
   - Участвовать в обсуждении после осуществления миграции
 
 
-  #### Лабораторная работа&#58; Миграция рабочих нагрузок БД PostgreSQL на БД Azure SQL 
+  #### Лабораторная работа&#58; Миграция рабочих нагрузок  БД PostgreSQL на БД Azure SQL
   - Настройка SQL Azure DB для PostgreSQL
   - Определение исходных и целевых БД
   - Осуществление миграции
   - Проверка миграции
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Настройка и управление базой данных SQL Azure для PostgreSQL
   - Осуществлять перенос локального MySQL в SQL DB для PostgreSQL
   - Осуществлять миграцию приложений
   - Участвовать в обсуждении после осуществления миграции
 
-  #### Дополнительные сведения. Никаких дополнительных сведений не требуется, чтобы пройти этот курс.
+  #### Дополнительные сведения
+  Никаких дополнительных сведений не требуется, чтобы пройти этот курс.
