--- a/learn-certs-pr/exams/62-193.yml
+++ b/learn-certs-pr/exams/62-193.yml
@@ -1,22 +1,21 @@
-### YamlMime:Examination
+﻿### YamlMime:Examination
 title: Technology Literacy for Educators
 metadata:
-  title: 'Экзамен 62-193: Technology Literacy for Educators'
-  description: 'Экзамен 62-193: Technology Literacy for Educators'
+  title: 'Exam 62-193: Technology Literacy for Educators'
+  описание: 'Exam 62-193: Technology Literacy for Educators'
 uid: exam.62-193
 displayName: 62-193
-summary: >-
+summary: |-
   Круг кандидатов на прохождение этого экзамена включает в себя всех, кто готовится стать преподавателем, нынешних преподавателей, преподавателей и студентов педагогических училищ, администраторов в сфере образования или других специалистов, желающих пройти проверку своей квалификации.
 
-
-  MCE&#58; Сертификационный экзамен Technology Literacy for Educators является тестом для кандидатов среднего уровня, который предназначен для надежного и действенного определения уровня навыков в соответствии с критериями платформы 21st Century Learning Design (21CLD).
+  Сертификационный экзамен MCE&#58; Technology Literacy for Educators является тестом для кандидатов среднего уровня, который предназначен для надежного и действенного определения уровня навыков в соответствии с критериями платформы 21st Century Learning Design (21CLD).
 subTitle: Круг кандидатов на прохождение этого экзамена включает в себя всех, кто готовится стать преподавателем, нынешних преподавателей, преподавателей и студентов педагогических училищ, администраторов в сфере образования или других специалистов, желающих пройти проверку своей квалификации.
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 providers:
   - providerType: pearson-vue
-    examUrl: https://examregistration.microsoft.com/?locale=ru-ru&examcode=62-193&examname=Technology%20Literacy%20for%20Educators&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Fen-us%2Flearn%2Fcertifications%2Fexams%2F62-193
+    examUrl: https://examregistration.microsoft.com/?locale=en-us&examcode=62-193&examname=Technology%20Literacy%20for%20Educators&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2F62-193
   - providerType: certiport
-    examUrl: https://www.certiport.com/locator
+    examUrl: http://www.certiport.com/locator
 locales:
 - en
 - de
@@ -27,13 +26,14 @@ locales:
 - ru
 - pl
 - ja
-levels:
+- tr
+levels: 
 - beginner
 skills:
 - Содействие совместной работе студентовx
 - Содействие квалифицированной коммуникации
 - Способствование формированию знаний
-- Способствование саморегулированию
+- Способствование саморегуляцию
 - Способствование решению реальных проблем и применению инноваций
 - Способствование использованию студентами информационных и коммуникационных инструментов (ICT)
 - Использование ICT с целью стать эффетивным преподавателем
@@ -50,7 +50,7 @@ resources:
   href: https://www.microsoft.com/learning/dashboard.aspx
 - title: Запрос специальных условий
   description: Узнайте больше о том, как подать заявку на получение специальных условий для сдачи экзамена.
-  href: https://www.pearsonvue.com/accommodations/pv_review.asp?clientName=Microsoft
+  href: http://www.pearsonvue.com/accommodations/pv_review.asp?clientName=Microsoft
 - title: Правила проведения экзаменов и часто задаваемые вопросы
   description: Ознакомьтесь с правилами экзамена и часто задаваемыми вопросами.
   href: ../certification-exam-policies.md
