--- a/learn-certs-pr/exams/ai-100.yml
+++ b/learn-certs-pr/exams/ai-100.yml
@@ -1,35 +1,32 @@
-### YamlMime:Examination
+﻿### YamlMime:Examination
 title: Designing and Implementing an Azure AI Solution
 metadata:
-  title: 'Экзамен AI-100: Designing and Implementing an Azure AI Solution'
-  description: 'Экзамен AI-100: Designing and Implementing an Azure AI Solution'
+  title: 'Exam AI-100: Designing and Implementing an Azure AI Solution'
+  description: 'Exam AI-100: Designing and Implementing an Azure AI Solution'
 uid: exam.ai-100
 displayName: AI-100
-summary: >-
+summary: |-
   Кандидаты на этот экзамен анализируют требования к облачным AI-решениям и гибридным AI-решениям, рекомендуют соответствующие инструменты и технологии и внедряют решения, отвечающие требованиям к масштабируемости и производительности.
-
   <br/>
-
 
   Кандидаты преобразовывают видение из архитекторов решений и работают с исследователями данных, инженерами данных, специалистами IoT и разработчиками AI над созданием комплексных решений. Кандидаты разрабатывают и внедряют AI-приложения и агентов, использующих когнитивные службы Microsoft Azure и Azure Bot Service. Кандидаты могут рекомендовать решения, использующие технологии с открытым исходным кодом.
 
-
   Кандидаты понимают компоненты, составляющие портфель Azure AI, и доступные варианты хранения данных.
-
 
   Кандидаты реализуют решения AI, использующие когнитивные службы, боты Azure, поиск Azure и хранение данных в Azure. Кандидаты понимают, когда необходима расзработка специализированных API в соответствии с конкретными требованиями.
 subTitle: 'Этот экзамен позволяет оценить вашу способность выполнять следующие технические задачи: анализ требований к решению; разработка решения; интеграция модели AI в решения; а также развертывание и управление решениями.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VC6C
+scheduleExamUrl: https://examregistration.microsoft.com/?locale=en-us&examcode=AI-100&examname=Exam%20AI-100:%20Designing%20and%20Implementing%20an%20Azure%20AI%20Solution&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fai-100
 locales:
 - en
 - ja
 - zh-cn
 - ko
-scheduleExamUrl: https://examregistration.microsoft.com/?locale=ru-ru&examcode=AI-100&examname=%20AI-100:%20Designing%20and%20Implementing%20an%20Azure%20AI%20Solution&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Fru-ru%2Flearn%2Fcertifications%2Fexams%2Fai-100
 levels:
 - intermediate
 skills:
+- 'NOTE: Тезисы, отображаемые под каждым из навыков в приведенном ниже документе с оцениваемыми навыками, предназначены для иллюстрации того, как мы оцениваем эти навыки. Этот список не является окончательным или исчерпывающим.'
 - Анализ требований к решению (25-30%)
 - Проектирование AI-решений (40-45%)
 - Внедрение и мониторинг AI-решений (25-30%)
@@ -45,7 +42,6 @@ products:
 courses:
 - uid: course.ai-100t01
 paths:
-- uid: learn.data-ai.publish-experiment-with-ml-studio
 - uid: learn.data-ai.evaluate-text-with-language-services
 - uid: learn.data-ai.translate-speech-with-speech-services
 - uid: learn.data-ai.create-bots-with-the-azure-bot-service
@@ -54,24 +50,24 @@ relatedCertifications:
 - related:
     uid: certification.azure-ai-engineer
 resources:
-- title: Обучение для получения сертификата
-  description: 'Откройте для себя учебные ресурсы, чтобы получить Microsoft Certified: Azure AI Engineer Associate.'
-  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWusKi
-- title: Руководство по обучению и сертификации
-  description: Изучите все сертификаты в кратком руководстве по обучению и сертификации.
+- title: Руководство по образовательным курсам и сертификациям
+  description: Изучите все сертификаты в кратком руководстве по образовательным курсам и сертификациям.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
-- title: Повтор экзамена
-  description: Два замечательных предложения, которые помогут вам повысить ваши шансы на успех.
+- title: Плакат с сертификацией
+  description: Ознакомьтесь с обзором сертификации основ, ролевой и специальной сертификациями.
+  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE2PjDI
+- title: Exam Replay [Повтор экзамена]
+  description: Два замечательных предложения, которые помогут вам повысить шансы на успех.
   href: ../deals.md
 - title: Поддержка сертификационных экзаменов
-  description: Получить помощь через форум поддержки сертификации Microsoft Модератор форума ответит в течение одного рабочего дня, с понедельника по пятницу.
+  description: обратитесь за помощью на форумы поддержки сертификации Microsoft. Модератор форума ответит в течение одного рабочего дня, с понедельника по пятницу.
   href: ../help.md
 - title: Панель управления сертификацией
   description: Просмотр и управление запланированными мероприятиями, сертификатами и транскриптами.
   href: https://www.microsoft.com/learning/dashboard.aspx
 - title: Запрос специальных условий
   description: Узнайте больше о том, как подать заявку на получение специальных условий для сдачи экзамена.
-  href: https://www.pearsonvue.com/accommodations/pv_review.asp?clientName=Microsoft
+  href: http://www.pearsonvue.com/accommodations/pv_review.asp?clientName=Microsoft
 - title: Правила проведения экзаменов и часто задаваемые вопросы
   description: Ознакомьтесь с правилами экзамена и часто задаваемыми вопросами.
   href: ../certification-exam-policies.md
