--- a/learn-certs-pr/exams/az-104.yml
+++ b/learn-certs-pr/exams/az-104.yml
@@ -1,4 +1,4 @@
-### YamlMime:Examination
+﻿### YamlMime:Examination
 title: Microsoft Azure Administrator (beta)
 metadata:
   title: 'Exam AZ-104: Microsoft Azure Administrator (beta)'
@@ -11,10 +11,10 @@ summary: |-
   Кандидаты должны иметь минимум шесть месяцев практического опыта администриования Azure. Кандидаты должны хорошо понимать основные службы Azure, рабочие нагрузки Azure, безопасность и управление. Кандидаты на этот экзамен должны иметь опыт использования PowerShell, интерфейса командной строки, портала Azure и шаблонов ARM.
   
   <div style='color&#58; red; font-weight&#58; bold;'><br/>ПРИМЕЧАНИЕ&#58; Этот экзамен станет доступен ориентировочно 31 марта 2020 года.</div>
-subTitle: 'Этот экзамен позволяет оценить вашу способность выполнять следующие технические задачи: управление удостоверениями Azure; реализвация и управление хранилищем; развертывание вычислительных ресурсов Azure и управляение ими; настройка и управление виртуальными сетями; отслеживание и резервное сохранение ресурсов Azure.'
+subTitle: 'Этот экзамен позволяет оценить вашу способность выполнять следующие технические задачи: управление удостоверениями  Azure; реализвация и управление хранилищем; развертывание вычислительных ресурсов Azure и управляение ими; настройка и управление виртуальными сетями; отслеживание и резервное сохранение ресурсов Azure.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4pCWy
-scheduleExamUrl: https://examregistration.microsoft.com/?locale=ru-ru&examcode=AZ-104&examname=Exam%20AZ-104:%20Microsoft%20Azure%20Administrator&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Faz-104
+scheduleExamUrl: https://examregistration.microsoft.com/?locale=en-us&examcode=AZ-104&examname=Exam%20AZ-104:%20Microsoft%20Azure%20Administrator&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Faz-104
 locales:
 - en
 levels:
@@ -45,10 +45,7 @@ relatedCertifications:
 - related:
     uid: none
 resources:
-- title: Обучение для получения сертификата
-  description: 'Откройте для себя учебные ресурсы, чтобы получить Microsoft Certified: Azure Administrator Associate.'
-  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtY7Z
-- title: Руководство по обучению и сертификации
+- title: Руководство по образовательным курсам и сертификациям
   description: Изучите все сертификаты в кратком руководстве по образовательным курсам и сертификациям.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
 - title: Плакат с сертификацией
