--- a/learn-certs-pr/exams/az-203.yml
+++ b/learn-certs-pr/exams/az-203.yml
@@ -1,4 +1,4 @@
-### YamlMime:Examination
+﻿### YamlMime:Examination
 title: Developing Solutions for Microsoft Azure
 metadata:
   title: 'Exam AZ-203: Developing Solutions for Microsoft Azure'
@@ -6,7 +6,7 @@ metadata:
 uid: exam.az-203
 displayName: AZ-203
 summary: |-
-  <div style='color&#58; red; font-weight&#58; bold;'>НОВАЯ ВЕРСИЯ ЭТОГО ЭКЗАМЕНА, <a href="/learn/certifications/exams/az-204">AZ-204</a>, СТАЛА ДОСТУПНОЙ С 24 ФЕВРАЛЯ. Вы сможете сдать этот экзамен до 31 мая 2020 года. Примечание&#58; Экзамен будет отменен в 23&#58;59 по центральному стандартному времени<br/><br/></div>
+  <div style='color&#58; red; font-weight&#58; bold;'>НОВАЯ ВЕРСИЯ ЭТОГО ЭКЗАМЕНА, <a href="/learn/certifications/exams/az-204">AZ-204</a>, СТАЛА ДОСТУПНОЙ С 24 ФЕВРАЛЯ. Вы сможете сдать этот экзамен до 31 мая 2020 года. Примечание&#58; Экзамен будет отменен в 23:59 по центральному стандартному времени<br/><br/></div>
   
   Кандидатами на этот экзамен являются разработчики Azure, которые разрабатывают и внедряют облачные решения, такие как приложения и сервисы. Они участвуют на всех этапах разработки, от проектирования решений до разработки и развертывания, до тестирования и обслуживания. Они взаимодействуют с архитекторами облачных решений, администраторами облачных баз данных, администраторами облаков и клиентами для реализации решения.
   <br/>
@@ -15,7 +15,7 @@ summary: |-
 
   Кандидаты должны иметь по крайней мере один год опыта разработки масштабируемых решений на всех этапах разработки программного обеспечения и быть опытными по крайней мере в одном поддерживаемом облаком языке программирования.
 
-  <div style='color&#58; red; font-weight&#58; bold;'><br/>ПРИМЕЧАНИЕ: После прохождении этого экзамена вы получите следующий сертификат&#58; <a href="https://docs.microsoft.com/learn/certifications/azure-developer">Microsoft Certified&#58; Azure Developer Associate</a>.</div>
+  <div style='color&#58; red; font-weight&#58; bold;'><br/>ПРИМЕЧАНИЕ&#58; После прохождении этого экзамена вы получите следующий сертификат&#58; <a href="https://docs.microsoft.com/learn/certifications/azure-developer">Microsoft Certified&#58; Azure Developer Associate</a>.</div>
 subTitle: 'Этот экзамен позволяет оценить вашу способность выполнять следующие технические задачи: разрабатывать вычислительные решения Azure; разрабатывать вычислительные решения Azure Platform; развивать хранилище Azure; внедрять безопасность Azure; отслеживать, устранять неисправности и оптимизировать решения; подключаться и использовать службы Azure , а также и сторонние службы.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VEHC
@@ -26,7 +26,7 @@ locales:
 - ko
 providers:
   - providerType: pearson-vue
-    examUrl: https://examregistration.microsoft.com/?locale=ru-ru&examcode=AZ-203&examname=Exam%20AZ-203:%20Developing%20Solutions%20for%20Microsoft%20Azure&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Faz-203
+    examUrl: https://examregistration.microsoft.com/?locale=en-us&examcode=AZ-203&examname=Exam%20AZ-203:%20Developing%20Solutions%20for%20Microsoft%20Azure&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Faz-203
 levels:
 - intermediate
 skills:
@@ -36,7 +36,7 @@ skills:
 - Разработка хранилища Azure (15-20%)
 - Внедрение безопасности Azure (10-15%)
 - Мониторинг, устранение неполадок и оптимизация решений (10-15%)
-- Подключение и использование Azure и сторонних служб (20-25%)
+- Подключение и использование служб Azure и сторонних служб (20-25%)
 retirementDate: 05/31/2020
 roles:
 - developer
@@ -75,7 +75,7 @@ resources:
 - title: Обучение для получения сертификата
   description: 'Откройте для себя учебные ресурсы, чтобы получить Microsoft Certified: Azure Developer Associate.'
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQqM
-- title: Руководство по обучению и сертификации
+- title: Руководство по образовательным курсам и сертификациям
   description: Изучите все сертификаты в кратком руководстве по образовательным курсам и сертификациям.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
 - title: Плакат с сертификацией
