--- a/learn-certs-pr/exams/pl-900.yml
+++ b/learn-certs-pr/exams/pl-900.yml
@@ -1,4 +1,4 @@
-### YamlMime:Examination
+﻿### YamlMime:Examination
 title: 'Microsoft Power Platform Fundamentals'
 metadata:
   title: 'Exam PL-900: Microsoft Power Platform Fundamentals'
@@ -8,7 +8,7 @@ displayName: PL-900
 summary: |-
   Кандидатами на этот экзамен являются пользователи, которые стремятся повысить производительность труда, автоматизируя бизнес-процессы, анализируя данные для получения бизнес-аналитики и действуя более эффективно, создавая простые приложения.
   
-  Этот экзамен включает следующие задания: описание компонентов Power Platform; Power Apps, Power BI, Microsoft Automate, Common Data Service (CDS), коннекторы и AI Builder; описание кросс-облачных сценариев с представлением в Microsoft 365, Dynamics 365, Microsoft Azure и сторонних сервисах; определение преимуществ и возможностей Power Platform; определение основных функциональных возможностей и ценностей для бизнеса компонентов Power Platform; реализация простых решений с помощью Microsoft Automate, Power BI и AI Builder; и создание базовых приложений в среде без кода.
+  Этот экзамен включает следующие задания&#58; описание компонентов Power Platform&#58; Power Apps, Power BI, Microsoft Automate, Common Data Service (CDS), коннекторы и AI Builder; описание кросс-облачных сценариев с представлением в Microsoft 365, Dynamics 365, Microsoft Azure и сторонних сервисах; определение преимуществ и возможностей Power Platform; определение основных функциональных возможностей и ценностей для бизнеса компонентов Power Platform; реализация простых решений с помощью Microsoft Automate, Power BI и AI Builder; и создание базовых приложений в среде без кода.
 subTitle: Этот экзамен позволяет оценить вашу способность понимать ценность Power Platform для бизнеса; понимать основные компоненты Power Platform; продемонстрировать деловую ценность Power BI; и продемонстрировать деловую ценность Microsoft Automate.
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE43Nnn
@@ -16,7 +16,7 @@ locales:
 - en
 providers:
   - providerType: pearson-vue
-    examUrl: 'https://examregistration.microsoft.com/?locale=ru-ru&examcode=PL-900&examname=Exam%20PL-900:%20Microsoft%20Power%20Platform%20Fundamentals&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fpl-900'
+    examUrl: https://examregistration.microsoft.com/?locale=en-us&examcode=PL-900&examname=Exam%20PL-900:%20Microsoft%20Power%20Platform%20Fundamentals&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fpl-900
   - providerType: certiport
     examUrl: http://www.certiport.com/locator
 levels:
@@ -24,7 +24,7 @@ levels:
 skills:
 - Понимание ценности Power Platform для бизнеса (20-25 %)
 - Понимание основных компонентов Power Platform (20-25%)
-- Демонстрация ценности Power BI для бизнеса (15-20 %)
+- Демонстрация ценности Power BI для бизнеса (15-20%)
 - Демонстрация ценности Power Apps для бизнеса(20-25%)
 - Продемонстрируйте коммерческую ценность Power Automate (15-20%)
 roles:
@@ -40,15 +40,15 @@ relatedCertifications:
     uid: certification.power-platform-fundamentals
 resources:
 - title: Обучение для получения сертификата
-  description: 'Откройте для себя учебные ресурсы, чтобы получить сертификат Microsoft: Power Platform Fundamentals.'
+  description: 'Откройте для себя учебные ресурсы, чтобы получить Microsoft Certified: Power Platform Fundamentals.'
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4oeDu
-- title: Руководство по обучению и сертификации
+- title: Руководство по образовательным курсам и сертификациям
   description: Изучите все сертификаты в кратком руководстве по образовательным курсам и сертификациям.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
 - title: Плакат с сертификацией
   description: Ознакомьтесь с обзором сертификации основ, ролевой и специальной сертификациями.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE2PjDI
-- title: Exam Replay
+- title: Exam Replay [Повтор экзамена]
   description: Два замечательных предложения, которые помогут вам повысить шансы на успех.
   href: ../deals.md
 - title: Поддержка сертификационных экзаменов
